<resources>
    <string name="podcasts">Podcasts</string>
    <string name="action_open_drawer">Open navigation drawer</string>
    <string name="nav_world_music">Music</string>
    <string name="podcast_subscriptions_tab">Subscriptions</string>
    <string name="podcast_tab_home">Home</string>
    <string name="podcast_tab_queue">Queue</string>
    <string name="podcast_tab_inbox">Inbox</string>
    <string name="podcast_tab_episodes">Episodes</string>
    <string name="podcast_tab_downloads">Downloads</string>
    <string name="podcast_tab_history">History</string>
    <string name="podcast_tab_favorites">Favorites</string>
    <string name="podcast_tab_statistics">Statistics</string>
    <string name="podcast_tab_coming_soon">Coming soon</string>
    <string name="podcast_categories">Podcast tabs</string>
    <string name="pref_summary_podcast_categories">Choose podcast bottom navigation items</string>
    <string name="pref_header_podcast_tabs">Bottom navigation</string>
    <string name="podcast_settings_title">Podcasts</string>
    <string name="podcast_settings_summary">Podcast world bottom navigation</string>
    <string name="podcast_feed_url_hint">Podcast RSS feed URL</string>
    <string name="podcast_subscribe">Subscribe</string>
    <string name="podcast_download">Download episode</string>
    <string name="podcast_delete_download">Delete downloaded episode</string>
    <string name="podcast_cancel_download">Cancel download</string>
    <string name="podcast_skip_back">Skip back 10 seconds</string>
    <string name="podcast_skip_forward">Skip forward 30 seconds</string>
    <string name="podcast_play">Play episode</string>
    <string name="podcast_episodes">Episodes</string>
    <string name="podcast_resume">Resume</string>
    <string name="podcast_filter">Filter episodes</string>
    <string name="podcast_filter_all">All episodes</string>
    <string name="podcast_filter_downloaded">Downloaded only</string>
    <string name="podcast_filter_in_progress">In progress</string>
    <string name="podcast_sort_newest">Newest first</string>
    <string name="podcast_sort_oldest">Oldest first</string>
    <string name="podcast_refresh">Refresh episodes</string>
    <string name="podcast_refreshing">Refreshing…</string>
    <string name="podcast_unsubscribe">Unsubscribe</string>
    <string name="podcast_unsubscribe_confirm">Unsubscribe from %1$s? Downloaded episodes will be deleted.</string>
    <string name="podcast_mark_as_played">Mark as played</string>
    <string name="podcast_mark_as_unplayed">Mark as unplayed</string>
    <string name="podcast_home_continue_listening">Continue Listening</string>
    <string name="podcast_home_inbox">See What\'s New</string>
    <string name="podcast_home_top_subscriptions">Top Subscriptions</string>
    <string name="podcast_home_suggestions">Suggestions</string>
    <string name="podcast_home_favorites">Favorites</string>
    <string name="podcast_home_empty">Subscribe to a podcast to see it here</string>
    <string name="podcast_favorites_empty">Episodes you favorite will show up here</string>
    <string name="podcast_downloads_empty">Downloaded episodes will show up here</string>
    <string name="podcast_history_empty">Episodes you\'ve played will show up here</string>
    <string name="podcast_inbox_empty">New episodes from your subscriptions will show up here</string>
    <string name="podcast_episodes_empty">Subscribe to a podcast to see its episodes here</string>
    <string name="podcast_mark_as_favorite">Add to favorites</string>
    <string name="podcast_unmark_as_favorite">Remove from favorites</string>
    <string name="podcast_stream_episode">Stream episode</string>
    <string name="pref_header_podcast_playback">Playback</string>
    <string name="pref_title_prefer_streaming">Prefer streaming</string>
    <string name="pref_summary_prefer_streaming">Show Play on an episode\'s page even if it isn\'t downloaded yet. Off by default to encourage downloading for offline listening -- you can still stream from the overflow menu or an episode\'s long-press menu.</string>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="added_song_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_md3_name">MD3</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_fade_duration">Audio fade duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="backup_restore_settings_summary">Backup and restore your settings, playlists</string>
    <string name="backup_restore_title">
        <![CDATA[Backup & Restore]]>
    </string>
    <string name="backup_title">Backups</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="bluetooth_summary">The app needs nearby devices permission to check for bluetooth devices</string>
    <string name="bluetooth_title">Nearby devices</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_square">Square Card</string>
    <string name="card_style">Card</string>
    <string name="cascading">Cascading</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Check out What\'s New</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_restore_title">Choose what to restore</string>
    <string name="circle">Circle</string>
    <string name="circular">Circular</string>
    <string name="classic">Classic</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_playing_queue">Clear queue</string>
    <string name="color">Color</string>
    <string name="colors">Colors</string>
    <string name="compact">Compact</string>
    <string name="composer">Composer</string>
    <string name="copied_device_info_to_clipboard">Copied device info to clipboard.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="create_new_backup">Create</string>
    <string name="credit_title">Members and contributors </string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="custom_artist_images">Custom Artist Images</string>
    <string name="customactivityoncrash_error_activity_error_details_share">Share Crash Report</string>
    <string name="dark_theme_name">Kinda Dark</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="playback_speed">Playback Speed</string>
</resources>