<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        app:title="@string/pref_header_podcast_tabs">

        <code.name.monkey.retromusic.preferences.PodcastLibraryPreference
            android:key="podcast_categories"
            android:layout="@layout/list_item_view"
            android:summary="@string/pref_summary_podcast_categories"
            android:title="@string/podcast_categories"
            app:icon="@drawable/ic_mic" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        app:title="@string/pref_header_podcast_playback">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="prefer_streaming"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_prefer_streaming"
            android:title="@string/pref_title_prefer_streaming" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
