<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/action_home">

    <fragment
        android:id="@+id/genreDetailsFragment"
        android:name="code.name.monkey.retromusic.fragments.genres.GenreDetailsFragment"
        android:label="GenreDetailsFragment"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="extra_genre"
            app:argType="code.name.monkey.retromusic.model.Genre" />
    </fragment>

    <fragment
        android:id="@+id/playlistDetailsFragment"
        android:name="code.name.monkey.retromusic.fragments.playlists.PlaylistDetailsFragment"
        android:label="PlaylistDetailsFragment"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="extra_playlist_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/albumDetailsFragment"
        android:name="code.name.monkey.retromusic.fragments.albums.AlbumDetailsFragment"
        android:label="AlbumDetailsFragment"
        tools:layout="@layout/fragment_album_details">
        <argument
            android:name="extra_album_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/artistDetailsFragment"
        android:name="code.name.monkey.retromusic.fragments.artists.ArtistDetailsFragment"
        android:label="ArtistDetailsFragment"
        tools:layout="@layout/fragment_artist_details">
        <argument
            android:name="extra_artist_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/albumArtistDetailsFragment"
        android:name="code.name.monkey.retromusic.fragments.artists.AlbumArtistDetailsFragment"
        android:label="AlbumArtistDetailsFragment"
        tools:layout="@layout/fragment_artist_details">
        <argument
            android:name="extra_artist_name"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/libraryFragment"
        android:name="code.name.monkey.retromusic.fragments.library.LibraryFragment"
        android:label=""
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/detailListFragment"
        android:name="code.name.monkey.retromusic.fragments.other.DetailListFragment"
        android:label="DetailListFragment">
        <argument
            android:name="type"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/action_search"
        android:name="code.name.monkey.retromusic.fragments.search.SearchFragment"
        android:label="SearchFragment"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="code.name.monkey.retromusic.fragments.settings.SettingsFragment" />

    <fragment
        android:id="@+id/podcasts_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastsFragment"
        android:label="@string/podcasts"
        tools:layout="@layout/fragment_main_recycler" />

    <fragment
        android:id="@+id/podcastDetailsFragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastDetailsFragment"
        android:label="PodcastDetailsFragment"
        tools:layout="@layout/fragment_podcast_details">
        <argument
            android:name="extra_podcast_id"
            app:argType="long" />
    </fragment>

    <!-- Placeholder Podcasts-world tabs, see AbsPodcastPlaceholderFragment and
         PodcastCategoryInfo.Category. Real screens land as follow-up work. -->
    <fragment
        android:id="@+id/podcasts_home_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastsHomeFragment"
        android:label="@string/podcast_tab_home"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_queue_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastQueueFragment"
        android:label="@string/podcast_tab_queue"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_inbox_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastInboxFragment"
        android:label="@string/podcast_tab_inbox"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_episodes_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastEpisodesFragment"
        android:label="@string/podcast_tab_episodes"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_downloads_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastDownloadsFragment"
        android:label="@string/podcast_tab_downloads"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_history_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastHistoryFragment"
        android:label="@string/podcast_tab_history"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_favorites_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastFavoritesFragment"
        android:label="@string/podcast_tab_favorites"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/podcasts_statistics_fragment"
        android:name="code.name.monkey.retromusic.podcast.PodcastStatisticsFragment"
        android:label="@string/podcast_tab_statistics"
        tools:layout="@layout/fragment_podcast_placeholder" />

    <fragment
        android:id="@+id/action_album"
        android:name="code.name.monkey.retromusic.fragments.albums.AlbumsFragment"
        tools:layout="@layout/fragment_main_recycler" />

    <fragment
        android:id="@+id/action_artist"
        android:name="code.name.monkey.retromusic.fragments.artists.ArtistsFragment"
        tools:layout="@layout/fragment_main_recycler" />

    <fragment
        android:id="@+id/action_song"
        android:name="code.name.monkey.retromusic.fragments.songs.SongsFragment"
        tools:layout="@layout/fragment_main_recycler" />

    <fragment
        android:id="@+id/action_genre"
        android:name="code.name.monkey.retromusic.fragments.genres.GenresFragment"
        tools:layout="@layout/fragment_main_recycler" />

    <fragment
        android:id="@+id/action_playlist"
        android:name="code.name.monkey.retromusic.fragments.playlists.PlaylistsFragment"
        tools:layout="@layout/fragment_main_recycler" />

    <fragment
        android:id="@+id/action_folder"
        android:name="code.name.monkey.retromusic.fragments.folder.FoldersFragment"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/action_home"
        android:name="code.name.monkey.retromusic.fragments.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/user_info_fragment"
        android:name="code.name.monkey.retromusic.fragments.other.UserInfoFragment" />

    <fragment
        android:id="@+id/playing_queue_fragment"
        android:name="code.name.monkey.retromusic.fragments.queue.PlayingQueueFragment" />

    <fragment
        android:id="@+id/lyrics_fragment"
        android:name="code.name.monkey.retromusic.fragments.lyrics.LyricsFragment" />
</navigation>