<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="12dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/podcastHistory"
        style="@style/HomeActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/podcast_tab_history"
        app:icon="@drawable/ic_history"
        app:layout_constraintEnd_toStartOf="@+id/podcastDownloads"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/podcastDownloads"
        style="@style/HomeActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/podcast_tab_downloads"
        app:icon="@drawable/ic_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/podcastHistory"
        app:layout_constraintTop_toTopOf="@+id/podcastHistory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/podcastFavorites"
        style="@style/HomeActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/podcast_tab_favorites"
        app:icon="@drawable/ic_favorite_border"
        app:layout_constraintEnd_toStartOf="@+id/podcastStatistics"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/podcastHistory"
        app:layout_constraintTop_toBottomOf="@+id/podcastHistory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/podcastStatistics"
        style="@style/HomeActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/podcast_tab_statistics"
        app:icon="@drawable/ic_trending_up"
        app:layout_constraintEnd_toEndOf="@+id/podcastDownloads"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/podcastFavorites"
        app:layout_constraintTop_toBottomOf="@+id/podcastDownloads" />

</androidx.constraintlayout.widget.ConstraintLayout>
